Revert "fix: wheel event don't work on mobile -> change to scroll"
This reverts commit 3d7eac927691d245887661849b54132d5aefbd0e.

--- a/base/_text.scss
+++ b/base/_text.scss
@@ -3,7 +3,6 @@
 
 $fontSizeNormal: 18px;
 $fontSizeLarge: 22px;
-$fontSizeXL: 30px;
 $fontSize2XL: 45px;
 $fontSize4XL: 108px;
 
@@ -12,9 +11,6 @@ $fontSize4XL: 108px;
 }
 @mixin fontSize2XL {
   font-size: $fontSize2XL;
-}
-@mixin fontSizeXL {
-  font-size: $fontSizeXL;
 }
 @mixin fontSize4XL {
   font-size: $fontSize4XL;
