--- a/pages/style/contact.module.scss
+++ b/pages/style/contact.module.scss
@@ -12,20 +12,13 @@
   }
 
   .social {
-    padding-top: $MagicNumber * 2;
-    @include fontSizeXL;
+    @include fontSize2XL;
     a {
-      padding: 0 $MagicNumber;
+      padding: 0 30px;
     }
+  }
+
+  .social {
     display: flex;
-    @media screen and (max-width: 700px) {
-      a {
-        padding: 0 30px;
-      }
-    }
-    @media screen and (max-width: 550px) {
-      flex-direction: column;
-      align-items: center;
-    }
   }
 }
